fix a11y contrast on dark text-only buttons

--- a/dark.css
+++ b/dark.css
@@ -35,17 +35,17 @@
     --button-primary-hover-color-2: var(--purple-900);
     --button-primary-active-color: var(--purple-900);
 
-    --button-primary-text-only-color: var(--purple-500);
+    --button-primary-text-only-color: var(--purple-400);
     --button-primary-text-only-hover-color: var(--purple-300);
     --button-primary-text-only-hover-bg-color-1: var(--grey-warm-800);
     --button-primary-text-only-hover-bg-color-2: var(--grey-warm-800);
 
-    --button-secondary-text-only-color: var(--green-500);
+    --button-secondary-text-only-color: var(--green-400);
     --button-secondary-text-only-hover-color: var(--green-200);
     --button-secondary-text-only-hover-bg-color-1: var(--grey-warm-800);
     --button-secondary-text-only-hover-bg-color-2: var(--grey-warm-800);
 
-    --button-danger-text-only-color: var(--red-500);
+    --button-danger-text-only-color: var(--red-300);
     --button-danger-text-only-hover-color: var(--red-200);
     --button-danger-text-only-hover-bg-color-1: var(--grey-warm-800);
     --button-danger-text-only-hover-bg-color-2: var(--grey-warm-800);
